[package]
name = "wallhaven-downloader"
version = "0.1.0"
authors = ["Cyril Mizzi <cyril@lesiteimmo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = [] }
tokio = { version = "0.2", features = ["full"] }
log = "0.4.11"
select = "0.5.0"
futures = "0.3.5"
env_logger = "0.7.1"
clap = "3.0.0-beta.1"
ratelimit = "0.4.4"
